# ducktor

./: CONTRIBUTING.md  README.md  main.py  pyproject.toml  smoke_test.py
.github/workflows/: ci.yml
ducktor/: __init__.py  cli.py  compiler.py  differ.py  engine.py  models.py  parser.py  profiler.py  reporter.py  result.py
examples/: orders_contract.yaml  users_contract.yaml
tests/: test_compiler.py  test_engine.py  test_parser.py  test_reporter.py
tests/fixtures/: invalid_bad_null_rate_col.yaml  invalid_missing_source.yaml  make_fixtures.py  minimal.csv  minimal_contract.yaml  orders_clean.parquet  orders_dirty.parquet  orders_v1.yaml  orders_v2.yaml  valid_contract.yaml
